# sparqwrapper_mock_draft

./: .gitignore  README.md  pyproject.toml
sparqlwrapper_mock_draft/: draft.py  draft_urllib_mock.py
sparqlwrapper_mock_draft/example/: basic_example.py
sparqlwrapper_mock_draft/utils/: models.py  utils.py
tests/data/graphs/: __init__.py  spiderman.ttl
tests/tests_sparqlwrapper_mock/: test_select.py
tests/utils/: utils.py  wrapper.py
